<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@drawable/background_white_rounded_corners"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/permission_alert"
            android:textColor="#252525"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView_success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/please_open_settings_go_to_permissions_and_allow_the_required_permissions"
            android:textColor="@color/black"
            android:textSize="12dp" />

        <Button
            android:id="@+id/ok_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@drawable/gray_round"
            android:gravity="center"
            android:text="@string/ok"
            android:textColor="#3C3B3B" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/white_circle"
        android:elevation="2dp"
        android:orientation="vertical"
        android:padding="5dp"
        android:translationZ="2dp">

        <ImageView
            android:id="@+id/correct_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_alert" />

    </RelativeLayout>

</RelativeLayout>