<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:background="@drawable/white_background">


        <TextView
            style="@style/TextViewStyleLabelSizeRegular16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reject_reason"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:textColor="@color/textHeader"
            />

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/dividerColor"
            android:layout_height="1dp"/>
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="294dp"
            android:layout_height="178dp"
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_line_background">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="7dp"
                android:background="@color/white"
                android:hint="Reason"
                android:textAlignment="textStart"
                android:gravity="start"
                android:maxLines="12"
                style="@style/TextViewStyleLabelSizeRegular14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="139dp"
            android:layout_height="50dp"
            android:background="@drawable/black_cut_background"
            android:text="@string/cancel"
            android:textColor="@color/white"
            style="@style/TextViewStyleLabelSizeRegular16"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/tvSubmit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvSubmit"
            android:layout_width="139dp"
            android:layout_height="50dp"
            android:background="@drawable/black_cut_background"
            android:text="@string/submit"
            android:textColor="@color/white"
            style="@style/TextViewStyleLabelSizeRegular16"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvCancel"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>